# github-ai-scraper

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  README_CN.md  RELEASE_NOTES.md  ai-scraper.yaml  docker-compose.yml  go.mod  pyproject.toml  scraped_repos.json
.github/workflows/: ci.yml  release.yml
cmd/scheduler/: limiter.go  processor.go  scheduler.go
cmds/scheduler/: main.go
docs/: PROGRESS.md
docs/promotion/: chinese-article-outline.md  english-article-outline.md
docs/superpowers/plans/: 2026-05-09-github-ai-scraper.md  2026-05-09-keywords-and-output.md  2026-05-11-iteration-optimization-v2.md  2026-05-11-iteration-optimization.md  2026-05-14-promotion-plan.md
docs/superpowers/specs/: 2026-05-09-github-ai-scraper-design.md  2026-05-09-keywords-and-output-design.md  2026-05-14-promotion-plan-design.md
output/: repositories.md
plugins/: README.md  example_plugin.py
src/ai_scraper/: __init__.py  api_server.py  auth.py  backup.py  cache.py  classifier.py  cli.py  config.py  config_watcher.py  dedup.py  health.py  i18n.py  interactive.py  logging_config.py  plugins.py  retry.py  scheduler.py  scrape_progress.py  secure_storage.py  webhooks.py
src/ai_scraper/api/: __init__.py  github.py  gitlab.py  rate_limiter.py
src/ai_scraper/filters/: __init__.py  ai_filter.py
src/ai_scraper/keywords/: __init__.py  extractor.py
src/ai_scraper/models/: __init__.py  repository.py
src/ai_scraper/output/: __init__.py  excel.py  html.py  markdown.py  rss.py  translator.py
src/ai_scraper/plugins/: __init__.py
src/ai_scraper/storage/: __init__.py  async_database.py  database.py
tests/: __init__.py  test_api_server_performance.py  test_async_database.py  test_auth.py  test_backup.py  test_cache.py  test_classifier.py  test_classifier_enhanced.py  test_cli.py  test_concurrent_scrape.py  test_config.py  test_config_watcher.py  test_connection_pool.py  test_database.py  test_db_performance.py  test_dedup.py  test_dedup_enhanced.py  test_example_plugin.py  test_export_formats.py  test_filter.py  test_github.py  test_health.py  test_i18n.py  test_incremental.py  test_integration.py  test_interactive.py  test_keywords.py  test_models.py  test_output.py  test_output_html.py  test_rate_limiter_advanced.py  test_retry.py  test_scrape_progress.py  test_secure_storage.py  test_validation.py
