[project]
name = "ai-scraper"
version = "0.1.0"
description = "A CLI tool for discovering and scraping AI-related high-star repositories from GitHub and GitLab"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "lwx66615"}
]
keywords = [
    "ai",
    "github",
    "scraper",
    "machine-learning",
    "cli",
    "gitlab",
    "repositories",
    "trending",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
ai-scraper = "ai_scraper.cli:main"

[project.urls]
Homepage = "https://github.com/lwx66615/github-ai-scraper"
Repository = "https://github.com/lwx66615/github-ai-scraper"
Documentation = "https://github.com/lwx66615/github-ai-scraper#readme"
Issues = "https://github.com/lwx66615/github-ai-scraper/issues"
Changelog = "https://github.com/lwx66615/github-ai-scraper/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_scraper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
